[gd_scene load_steps=3 format=3 uid="uid://bmw36fknked8f"]

[ext_resource type="Script" uid="uid://lnde6jqdi0ol" path="res://scenes/components/tetromino/tetromino.gd" id="1_anylu"]
[ext_resource type="Texture2D" uid="uid://biupmqo5o7vib" path="res://assets/images/cell.png" id="2_2mgpo"]

[node name="Tetromino" type="Node2D"]
script = ExtResource("1_anylu")

[node name="Cell1" type="Sprite2D" parent="."]
texture = ExtResource("2_2mgpo")
centered = false

[node name="Cell2" type="Sprite2D" parent="."]
texture = ExtResource("2_2mgpo")
centered = false

[node name="Cell3" type="Sprite2D" parent="."]
texture = ExtResource("2_2mgpo")
centered = false

[node name="Cell4" type="Sprite2D" parent="."]
texture = ExtResource("2_2mgpo")
centered = false
